feature(clean-code): Fix code simplifications/issues automatically with intellij.
This brings a lot of files that receive modification.